deploy.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-techofmany
  labels:
    app: techofmany
    tier: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: techofmany
      tier: frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: techofmany
        tier: frontend
    spec:
      containers:
      - name: k8s-techofmany
        image: <IMAGE>
        imagePullPolicy: IfNotPresent
        ports:
        - name: entry
          containerPort: 3001
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
        volumeMounts:
        - name: env-local
          mountPath: /src/.env.local
          readOnly: true
          subPath: .env.local
      imagePullSecrets:
        - name: regcred
      volumes:
      - name: env-local
        configMap:
          name: env-local
          defaultMode: 420
          items:
          - key: .env
            path: .env.local
---

apiVersion: v1
kind: Service
metadata:
  name: k8s-techofmany
spec:
  type: NodePort
  selector:
    app: techofmany
    tier: frontend
  ports:
  - protocol: TCP
    port: 3001
    targetPort: entry
